--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,5 +35,6 @@ jobs:
           pip install mkdocs-material
           pip install mkdocs-glightbox
           pip install mkdocs-table-reader-plugin
+          pip install mkdocs-awesome-nav
 
       - run: mkdocs gh-deploy --force
