hunting ground layout

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,7 +44,7 @@ theme:
 markdown_extensions:
   - admonition
   - pymdownx.details
-  - pymdownx.superfences
+  - pymdownx.superfences:
   - attr_list
   - md_in_html
   - abbr
